testdata/tests/cases/compiler/tluaAsyncContract.tlua
// @target: esnext

// The tlua coroutine contract: an async function may only be called from an
// async context. Async functions return their plain type (or pack), never
// Promise<T>.

declare function request(url: string): (boolean, any);
declare namespace coroutine {
  function create(f: (...: any) => any): any;
  function wrap(f: (...: any) => any): (...: any) => any;
}

async function fetchOk(url: string): (boolean, any)
  local ok, res = request(url);
  return ok, res;
end

// OK: direct call from an async context; the result is the plain pack.
async function handler(): number
  local ok, res = fetchOk("https://example.com");
  if ok then
    return 1;
  end
  return 0;
end

// Error: direct call from a sync function.
function syncCaller(): void {
  fetchOk("nope");
}

// Error: call at top level.
fetchOk("top");

// Error: inferred alias keeps the contract (the flag rides the signature).
function aliasCaller(): void {
  local f = fetchOk;
  f("aliased");
}

// OK: alias called from an async context.
async function aliasAsyncCaller(): void
  local f = fetchOk;
  f("aliased");
end

// OK: passing an async function as a value is not a call.
coroutine.create(fetchOk);
local wrapped = coroutine.wrap(fetchOk);

// OK: async recursion.
async function pingpong(n: number): number
  if n <= 0 then
    return 0;
  end
  return pingpong(n - 1);
end

// Async arrow expressions participate too.
local asyncArrow = async (): number => 42;
function arrowSyncCaller(): void {
  asyncArrow(); // error
}
async function arrowAsyncCaller(): number
  return asyncArrow(); // OK
end

// Generic async functions keep the flag through instantiation.
async function identityAsync<T>(x: T): T
  return x;
end
function genericSyncCaller(): void {
  identityAsync(1); // error
}
async function genericAsyncCaller(): number
  return identityAsync(2); // OK
end

// The async return type is the plain type, not Promise<T>.
async function plain(): number
  return 3;
end
async function usePlain(): number
  local n = plain();
  return n + 1;
end
